# llm-compress

./: CMakeLists.txt  README.md
build_audit/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  basic_compress.vcxproj  basic_compress.vcxproj.filters  llm-compress.sln  sliding_window.vcxproj  sliding_window.vcxproj.filters  smart_truncate.vcxproj  smart_truncate.vcxproj.filters  summarize_compress.vcxproj  summarize_compress.vcxproj.filters
build_audit/basic_compress.dir/Debug/: basic_compress.exe.recipe
build_audit/basic_compress.dir/Debug/basic_compress.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_audit/sliding_window.dir/Debug/: sliding_window.exe.recipe
build_audit/sliding_window.dir/Debug/sliding_window.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_audit/smart_truncate.dir/Debug/: smart_truncate.exe.recipe
build_audit/smart_truncate.dir/Debug/smart_truncate.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_audit/summarize_compress.dir/Debug/: summarize_compress.exe.recipe
examples/: basic_compress.cpp  compress_history.cpp  sliding_window.cpp  smart_truncate.cpp  summarize_compress.cpp
include/: llm_compress.hpp
(+15 files in other folders)
